--- a/HSW/style.css
+++ b/HSW/style.css
@@ -64,7 +64,7 @@ p {
 
 /* Aktywny stan treści */
 .card.active .content {
-    max-height: 600px;
+    max-height: none;
     opacity: 1;
     padding-top: 10px;
 }
