--- a/HSW/style.css
+++ b/HSW/style.css
@@ -64,6 +64,7 @@ p {
 
 /* Aktywny stan treści */
 .card.active .content {
+    display: block;
     max-height: 600px;
     opacity: 1;
     padding-top: 10px;
